RESOLVED FIXED77338
[Qt][WK2] Render layers do not get flushed when the scroll animation finishes
https://bugs.webkit.org/show_bug.cgi?id=77338
Summary [Qt][WK2] Render layers do not get flushed when the scroll animation finishes
Andras Becsi
Reported 2012-01-30 07:11:14 PST
Since r106121 MiniBrowser does not print the page after a scroll animation finishes. This is caused by the render layers do not get flushed at the end of the animation.
Attachments
proposed patch (1.50 KB, patch)
2012-01-30 07:18 PST, Andras Becsi
no flags
Andras Becsi
Comment 1 2012-01-30 07:18:15 PST
Created attachment 124545 [details] proposed patch
Andras Becsi
Comment 2 2012-01-30 09:19:36 PST
Comment on attachment 124545 [details] proposed patch Clearing flags on attachment: 124545 Committed r106249: <http://trac.webkit.org/changeset/106249>
Andras Becsi
Comment 3 2012-01-30 09:19:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.