[Qt][WK2] Render layers do not get flushed when the scroll animation finishes https://bugs.webkit.org/show_bug.cgi?id=77338

Reviewed by Noam Rosenthal.

Schedule a layer flush when setting the visible content rect and scale.

Fixed with the help of Jocelyn Turcotte <jocelyn.turcotte@nokia.com>

* WebProcess/WebPage/qt/LayerTreeHostQt.cpp:
(WebKit::LayerTreeHostQt::setVisibleContentRectAndScale):

Canonical link: https://commits.webkit.org/94220@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106249 268f45cc-cd09-0410-ab3c-d52691b4dbfc